# preprocessing

./: .dockerignore  .gitignore  .readthedocs.yaml  LICENSE  README.md  example.csv  pyproject.toml
docker/: .null-ls_466484_preprocessing_docker  Dockerfile  install.sh  preprocessing-docker  preprocessing_docker
docs/: conf.py  index.rst  preprocessing.brain.rst  preprocessing.data.rst  preprocessing.qc.rst  preprocessing.rst
notebooks/: (0) Installation.ipynb  (1) Dataset Creation.ipynb  (2) Preprocessing Steps.ipynb  Dataset_Creation.ipynb
notebooks/.ipynb_checkpoints/: Dataset_Creation-checkpoint.ipynb  Installation-checkpoint.ipynb
notebooks/dicom_dataset_examples/: remind_dataset.csv  upenn_gbm_dataset.csv
preprocessing/: __init__.py  __main__.py  constants.py  dcm_tools.py  longitudinal_tracking.py  series_selection.py  slurm_concurrency.py  synthmorph.py  synthstrip.py  utils.py
preprocessing/bids/: __init__.py  nifti_conversion.py  reorganize.py  validator.py
preprocessing/brain/: __init__.py  brain_preprocessing.py  synthstrip.py
preprocessing/data/: __init__.py  anonymization.py  datasets.py  nifti_conversion.py  reorganize.py
preprocessing/nifti/: convert.py
preprocessing/qc/: __init__.py  tumor_ids.py  volumetric_tracking.py
