[tool.poetry]
name = "preprocessing"
version = "0.1.0"
description = "QTIM preprocessing package"
authors = ["Mason Cleveland <mcleveland2@mgh.harvard.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10,<3.12"
pydicom = "^2.4.3"
pandas = "^2.1.3"
visidata = "^2.11.1"
tqdm = "^4.57.0"
bids-validator = "^1.14.0"
pybids = "^0.16.4"
nipype = "^1.8.6"
dicom2nifti = "^2.4.9"
mr-series-selection = {git = "git@github.com:QTIM-Lab/mr-series-selection.git"}
surfa = {git = "https://github.com/freesurfer/surfa.git", branch = "master"} # rev = "026cabec14bb03d9dfbc6b5bdf14baec7bd51c7f"}
voxelmorph = {git = "https://github.com/voxelmorph/voxelmorph.git", branch = "dev"} # rev = "ca3d47a2c254aae9a0c0e1b30c24c324c211ebc8"}
neurite = {git = "https://github.com/adalca/neurite.git", branch = "dev"} #rev = "95b2b568b124cbc654467177ddcdb2cb3526788c"}
pycrumbs = "^0.2.0"
simpleitk = "^2.3.1"
connected-components-3d = "^3.12.4"
scikit-image = "^0.22.0"
highdicom = "^0.22.0"
tensorflow = "2.14"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"
ipywidgets = "^8.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
preprocessing = "preprocessing.__main__:main"
