[tool.poetry]
name = "preprocessing"
version = "0.1.0"
description = "QTIM preprocessing package"
authors = ["Mason C. Cleveland <mcleveland2@mgh.harvard.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10,<3.12"
numpy = "<2.0"
pydicom = ">=2.4.3,<=4.0.0"
pandas = "^2.1.3"
tqdm = "^4.57.0"
surfa = {git = "https://github.com/freesurfer/surfa.git", branch = "master"}
voxelmorph = {git = "https://github.com/voxelmorph/voxelmorph.git", rev = "2cd706189cb5919c6335f34feec672f05203e36b"}
neurite = {git = "https://github.com/adalca/neurite.git", rev = "40c6d0e277b12dc9dddb6e76f2dbdd373b7d22b1"}
pycrumbs = {git = "https://github.com/mccle/pycrumbs.git", branch = "char_limit" } # "^0.3.0"
simpleitk = "^2.3.1"
connected-components-3d = "^3.12.4"
scikit-image = "^0.22.0"
highdicom = ">=0.24.0,<1.0.0"
tensorflow = "2.14"
torch = "^2.2.1"
seaborn = "^0.13.2"
psutil = "6.0.0"
python-gdcm = ">=3.0.10"
pylibjpeg = ">=2.0"
pylibjpeg-libjpeg = ">=2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"
ipywidgets = "^8.1.2"
visidata = "^2.11.1"
sphinx = "*"
sphinx_rtd_theme = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
preprocessing = "preprocessing.__main__:main"
spreprocessing = "preprocessing.slurm_concurrency:slurm_cli"
